# EdgeMind

./: EdgeMind_MCP_Summit_Mumbai.pptx  README.md  Summit.md  edgemind_expert_qa.html
EdgeMind/: .gitignore  README.md
EdgeMind/app/: CMakeLists.txt  build.gradle.kts
EdgeMind/app/src/main/kotlin/com/edgemind/inference/: ExecuTorchRunner.kt  LlmInferenceEngine.kt  SlmInferenceEngine.kt  Tokenizer.kt
EdgeMind/app/src/main/kotlin/com/edgemind/mcp/tools/: InferenceTool.kt
EdgeMind/app/src/main/kotlin/com/edgemind/ui/: AssistantViewModel.kt
EdgeMind/cpp/: executorch_jni.cpp
EdgeMind/scripts/: export_phi3.py
